--- a/backend/env.template
+++ b/backend/env.template
@@ -1,13 +1,13 @@
 # Database
-DATABASE_URL="postgresql://hattab_user:hattab_password@localhost:5432/hattab_auto"
+DATABASE_URL="postgresql://username:password@localhost:5432/hattab_auto"
 
 # JWT
 JWT_SECRET="your-super-secret-jwt-key-change-this-in-production"
 JWT_EXPIRES_IN="7d"
 
 # Server
-PORT=5000
-NODE_ENV="development"
+PORT=5002
+NODE_ENV=development
 
 # Upload settings
 MAX_FILE_SIZE=5242880
@@ -15,4 +15,7 @@ UPLOAD_PATH="uploads"
 
 # Admin credentials (for initial setup)
 ADMIN_EMAIL="admin@hattabauto.com"
-ADMIN_PASSWORD="AdminPass123!" 
+ADMIN_PASSWORD="AdminPass123!"
+
+# CORS (for production)
+ALLOWED_ORIGINS="http://localhost:3000,http://localhost:3001,https://your-netlify-domain.netlify.app" 
