--- a/backend/env.template
+++ b/backend/env.template
@@ -1,5 +1,5 @@
-# Database
-DATABASE_URL="postgresql://username:password@localhost:5432/hattab_auto"
+# Database (SQLite - no DATABASE_URL needed)
+# DATABASE_URL="file:./dev.db"
 
 # JWT
 JWT_SECRET="your-super-secret-jwt-key-change-this-in-production"
